--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,18 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --navigation-height: 4.8rem;
+  }
+
   html {
     @apply bg-background font-sans text-white;
     font-size: 62.5%;
+  }
+}
+
+@layer utilities {
+  .text-shadow {
+    text-shadow: rgba(0, 0, 0, 0.25) 0px 3px 8px;
   }
 }
